--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>ToDo-list</title>
     <link rel="stylesheet" href="global-styles.css">
 </head>
 
@@ -18,8 +18,30 @@
 
         <!-- Layout -->
         <div class="parent">
-            <div class="div1">Calender</div>
-            <div class="div2">ToDo List</div>
+
+            <!-- Calender -->
+            <div class="div1" id="calender">
+                <div class="calender-header">
+                    <p id="time">11:00</p>
+                    <p id="day">6th</p>
+                    <p id="month">March</p>
+                    <p id="year">2025</p>
+                </div>
+                <div class="calender-days">
+                    <ul class="weekdays">
+                        <li>Mo</li>
+                        <li>Tu</li>
+                        <li>We</li>
+                        <li>Th</li>
+                        <li>Fr</li>
+                        <li>Sa</li>
+                        <li>Su</li>
+                    </ul>
+                    <ul class="days"></ul>
+                </div>
+            </div>
+
+            <div class="div2" id="todo">ToDo List</div>
             <div class="div3">Timer</div>
         </div>
 
