Added a simple todo list section.

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,19 @@
                 </div>
             </div>
 
-            <div class="div2" id="todo">ToDo List</div>
+            <div class="div2" id="todo">
+                <div class="todo-header">
+                    <input type="text" name="task" id="task">
+                    <img id="add" src="../public/images/add.svg" alt="">
+                </div>
+                <div class="todo-list">
+                    <div class="list-item">
+                        <p id="title">New List Item</p>
+                        <p>Start: 10:00</p>
+                        <p>End: 12:00</p>
+                    </div>
+                </div>
+            </div>
             <div class="div3">Timer</div>
         </div>
 
